--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,18 +12,16 @@ android {
         // used by Room, to test migrations
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = ["room.schemaLocation":
-                                     "$projectDir/schemas".toString()]
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
     }
 
     // used by Room, to test migrations
     sourceSets {
-        androidTest.assets.srcDirs +=
-                files("$projectDir/schemas".toString())
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
-    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -35,10 +33,7 @@ android {
 dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation
-    'android.arch.persistence.room:runtime:$rootProject.roomVersion'
-    annotationProcessor
-    'android.arch.persistence.room:compiler:$rootProject.roomVersion'
-    androidTestImplementation
-    'android.arch.persistence.room:testing:$rootProject.roomVersion'
+    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
 }
