--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,7 @@ android {
 dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation
-    'android.arch.persistence.room:runtime:$rootProject.roomVersion'
-    annotationProcessor
-    'android.arch.persistence.room:compiler:$rootProject.roomVersion'
-    androidTestImplementation
-    'android.arch.persistence.room:testing:$rootProject.roomVersion'
+    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
 }
